configurations/openshift/legitinfo-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.service.expose: "true"
    kompose.service.healthcheck.readiness.http_get_path: /health/
    kompose.service.healthcheck.readiness.http_get_port: "8080"
    kompose.service.healthcheck.readiness.interval: 10s
    kompose.service.healthcheck.readiness.retries: "3"
    kompose.service.healthcheck.readiness.start_period: 120s
    kompose.service.healthcheck.readiness.timeout: 10s
  creationTimestamp: null
  labels:
    io.kompose.service: legitinfo
  name: legitinfo
spec:
  replicas: 1
  selector:
    io.kompose.service: legitinfo
  strategy:
    resources: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: legitinfo
    spec:
      containers:
        - env:
            - name: POSTGRESQL_HOSTNAME
              value: legitinfo-db
            - name: USE_SQLITE3
              value: "False"
            - name: POSTGRESQL_DATABASE
              valueFrom:
                secretKeyRef:
                  name: postgresql
                  key: database-name
            - name: POSTGRESQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgresql
                  key: database-password
            - name: POSTGRESQL_USER
              valueFrom:
                secretKeyRef:
                  name: postgresql
                  key: database-user
          image: ' '
          name: legitinfo-app
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 10
          resources: {}
      restartPolicy: Always
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - legitinfo-app
        from:
          kind: ImageStreamTag
          name: legitinfo:1.0.0
      type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
